--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "mern-blog-app",
   "version": "1.0.0",
+  "duscription": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon api/index.js",
     "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.3"
-  }
+  },
+  "description": ""
 }
